2002-10-05  Markus Rost  <rost@math.ohio-state.edu>

	* editfns.c (Fformat_time_string): Doc fix.

2002-10-05  John Paul Wallington  <jpw@shootybangbang.com>

	* fns.c (Flength): Doc fix.

2002-10-04  Steven Tamm  <steventamm@mac.com>

	* macterm.c (keycode_to_xkeysym_table): Change return to be 
	treated like an X keysym

2002-10-03  Jan D.  <jan.h.d@swipnet.se>

	* xterm.c (XTread_socket): For ConfigureNotify, with x and y == 0,
	and USE_MOTIF, call XTranslateCoordinates to get the real x and y.
	This is to also handle x/y changes that occur because of a resize.

2002-10-02  John Paul Wallington  <jpw@shootybangbang.com>

	* frame.c (Vdelete_frame_functions): New variable.
	(syms_of_frame): Initialize and defvar it.
	(Fdelete_frame): Use it instead of delete-frame-hook.  Don't run
	it when frame's `tooltip' parameter is non-nil.

	* xfns.c (x_create_tip_frame): Set `tooltip' frame parameter to t.

	* w32fns.c (x_create_tip_frame): Likewise.

	* macfns.c (x_create_tip_frame): Likewise.

2002-09-30  Kenichi Handa  <handa@m17n.org>

	* xterm.c (x_encode_char): For DIM=1 charset, set ccl->reg[2] to
	-1 before calling ccl_driver.

	* coding.c (decode_coding_emacs_mule): Check coding->cmp_data.
	Only when it is non-nil, handle composition sequence.
	(setup_coding_system) <0>: Don't force composition handling.

	* Makefile.in (lisp, shortlisp): Add utf-16.elc

2002-09-29  Richard M. Stallman  <rms@gnu.org>

	* search.c (Freplace_match): Adjust match data for the substitution
	just made in the buffer.

	* xdisp.c (STOP_POLLING, RESUME_POLLING): New macros.
	(redisplay_internal): Use them.  Do RESUME_POLLING at end of function.

2002-09-27  Richard M. Stallman  <rms@gnu.org>

	* keyboard.c (STOP_POLLING, RESUME_POLLING): New macros.
	(read_char): Use them.  Do all exits thru the end of the function.

2002-09-27  Kenichi Handa  <handa@etl.go.jp>

	* xfaces.c (try_font_list): Pay attention to the case that FAMILY
	is nil.

2002-09-26  Richard M. Stallman  <rms@gnu.org>
